Update classpath filereader test